Make left column a fixed % of width so it doesn't jump around so much.

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
     background: url("background-pattern/fancy-pants.jpg");
     background-position-x: 50vw;
 }
-header h1 {
+h1 {
     font-family: 'Pacifico', cursive;
     font-size: 30px;
     margin: 0px 0px;
@@ -29,6 +29,7 @@ header h1 {
     padding-right: 20px;
     display: flex;
     flex-direction: column;
+    width: 25%;
 }
 #drawing {
     position: relative;
